--- a/assletter.html
+++ b/assletter.html
@@ -7,6 +7,10 @@
     <title>Creating a letter</title>
 
     <link rel="stylesheet" href="asscss.css">
+    <a href="index.html">Web</a>
+    <a href="imageass.html">World</a>
+    <a href="assletter.html">Wide</a>
+    <a href="anothercss.html">Far</a>
 </head>
 
 <body>
