--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Creating a website</title>
 
     <link rel="stylesheet" href="310ctober.css">
+    <a href="index.html">Web</a>
+    <a href="imageass.html">World</a>
+    <a href="assletter.html">Wide</a>
+    <a href="anothercss.html">Far</a>
 </head>
 <body>
     <h1 id="fooloish">Lola vice is a mad girl</h1>
