--- a/anothercss.html
+++ b/anothercss.html
@@ -7,6 +7,10 @@
     <title>Designing a webpage</title>
 
     <link rel="stylesheet" href="another.css">
+    <a href="index.html">Web</a>
+    <a href="imageass.html">World</a>
+    <a href="assletter.html">Wide</a>
+    <a href="anothercss.html">Far</a>
 </head>
 
 <body>
