--- a/imageass.html
+++ b/imageass.html
@@ -7,6 +7,10 @@
     <title>Decorating an image</title>
 
     <link rel="stylesheet" href="image.css">
+    <a href="index.html">Web</a>
+    <a href="imageass.html">World</a>
+    <a href="assletter.html">Wide</a>
+    <a href="anothercss.html">Far</a>
 </head>
 
 <body>
